--- a/bower.json
+++ b/bower.json
@@ -17,5 +17,8 @@
     "angular-route": "1.2.15",
     "bootstrap": "~3.1.1",
     "angular-bootstrap": "0.9.0"
+  },
+  "resolutions": {
+    "angular": "1.2.15"
   }
 }
